tolk-tester/tests/invalid-syntax/err-3823.tolk

/**
@path_mapping @first=v1
@path_mapping @first=v2
@compilation_should_fail
@stderr invalid path mapping: duplicated @first
 */
